1998-11-27  Tom Tromey  <tromey@cygnus.com>

	* automake.in (quote_cond_val): Use "\002", not '\002', to
	represent null string.
	(unquote_cond_val): Removing all "\002" strings from result.  Test
	cond7.test.

	* automake.texi: Formatting changes for latest texinfo.

	* automake.in (handle_java): Removed debugging print.

1998-11-18  Tom Tromey  <tromey@cygnus.com>

	* automake.in (finish_languages): Use CCLD, not CLD.

	* automake.in (finish_languages): Define CLD; use it in LINK
	definition.
	(lang_cxx_finish): Define CXXLD; use it in CXXLINK definition.
	(lang_f77_finish): Define FLD; use it in FLINK definition.
	(lang_ppf77_finish): Likewise.
	(lang_ratfor_finish): Likewise.

1998-11-10  Matthew D. Langston  <langston@SLAC.Stanford.EDU>

	* automake.in (scan_one_configure_file): Recognize
	AC_F77_LIBRARY_LDFLAGS, and recognize FLIBS as a configure
	substitution.

	* automake.texi: Fix several little Fortran 77 references to now
	point to autoconf.texi.  Rename associated Fortran 77 macros from
	`AM_' to `AC_'.

1998-11-10  Tom Tromey  <tromey@cygnus.com>

	* automake.in (read_am_file): Handle configure_vars case.  Test
	pluseq4.test.

1998-11-09  Tom Tromey  <tromey@cygnus.com>

	* automake.in (read_am_file): `conditional_stack' isn't a
	function.  Correctly add new value to existing value in `+='
	case.

1998-10-29  Gary V. Vaughan <gvaughan@oranda.demon.co.uk>

	* automake.in (parse_arguments): Fixed type of -c for copying

1998-10-30  Tom Tromey  <tromey@cygnus.com>

	* automake.texi (Install): Documented DESTDIR more fully.  From
	Jeff Garzik.

	* automake.in (MACRO_PATTERN): Recognize `+='.
	(BOGUS_MACRO_PATTERN): Likewise.
	(read_am_file): Handle `+=' assignments.

1998-10-28  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (maintainer-check): Changed code to be acceptable to
	bash 2.01.1.

	* automake.in (do_one_clean_target): Special-case config.status.
	Report from Jeff Garzik.

	* m4/Makefile.am (m4data_DATA): Don't mention f77.m4.