@@ -2478,7 +2478,7 @@ sub handle_dist
     # Some boilerplate.
     $output_vars .= &file_contents ('dist-vars') . "\n";
     &define_variable ('TAR', $TAR);
-    &define_variable ('GZIP', '--best');
+    &define_variable ('GZIP_ENV', '--best');
 
     # Put these things in rules section so it is easier for whoever
     # reads Makefile.in.
@@ -2513,7 +2513,7 @@ sub handle_dist
 # tarfile.
 distcheck: dist
 	-rm -rf $(distdir)
-	GZIP=$(GZIP) $(TAR) zxf $(distdir).tar.gz
+	GZIP=$(GZIP_ENV) $(TAR) zxf $(distdir).tar.gz
 	mkdir $(distdir)/=build
 	mkdir $(distdir)/=inst
 	dc_install_base=`cd $(distdir)/=inst && pwd`; \\'
@@ -6128,7 +6128,7 @@ sub initialize_global_constants
 		     . 'shar $(distdir) | gzip > $(distdir).shar.gz'
 		     . "\n");
     $dist{'dist-zip'} = "\t" . 'zip -rq $(distdir).zip $(distdir)' . "\n";
-    $dist{'dist'} = "\t" .  'GZIP=$(GZIP) $(TAR) chozf $(distdir).tar.gz $(distdir)' . "\n";
+    $dist{'dist'} = "\t" .  'GZIP=$(GZIP_ENV) $(TAR) chozf $(distdir).tar.gz $(distdir)' . "\n";
     $dist_trailer = "\t" . '-rm -rf $(distdir)' . "\n";
 }
 
