@@ -1,3 +1,9 @@
+1998-12-01  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.texi (Dist): Documented GZIP_ENV.
+	* automake.in (handle_dist): Define and use GZIP_ENV, not GZIP.
+	(initialize_global_constants): Use GZIP_ENV, not GZIP.
+
 1998-11-27  Tom Tromey  <tromey@cygnus.com>
 
 	* automake.in (quote_cond_val): Use "\002", not '\002', to
